--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="https://www.linkedin.com/in/nicholascartergv/">LinkedIn</a></li>
+					<li><a href="</li>
 				</ul>
 			</footer>
 		</body>
