added links to project repo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About</a></li>
+					<li><a href="/641project">CIS 641 Semester Project</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
@@ -20,7 +21,7 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="https://www.linkedin.com/in/nicholascartergv/">LinkedIn</a></li>
-					<li><a href="</li>
+					<li><a href="i-need-this-to-fork-the-repo-again.github.io">CIS 641 Project Repo</a></li>
 				</ul>
 			</footer>
 		</body>
