fixed the default index file... I think

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-			<title>{{ page.title }}</title>
+			<title>Nick Carter's Personal Website</title>
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
@@ -10,12 +10,12 @@
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About</a></li>
-					<li><a href="/641project">CIS 641 Semester Project</a></li>
+					<li><a href="/641project">CIS 641 Semester Project Information</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
 			
-			{{ content }}
+			Nick Carter's Personal Website
 			
 			</div><!-- /.container -->
 			<footer>
