--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,9 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
-					<li><a href="/641project">CIS 641 Semester Project Information</a></li>
+	        		<li><a href="https://nickcartergv.github.io/personal-website/">Home</a></li>
+		        	<li><a href="https://nickcartergv.github.io/personal-website/about">About</a></li>
+					<li><a href="https://nickcartergv.github.io/personal-website/641project">CIS 641 Semester Project Information</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
@@ -21,7 +21,7 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="https://www.linkedin.com/in/nicholascartergv/">LinkedIn</a></li>
-					<li><a href="i-need-this-to-fork-the-repo-again.github.io">CIS 641 Project Repo</a></li>
+					<li><a href="https://i-need-this-to-fork-the-repo-again.github.io/GVSU-CIS641-ElectricSpaghetti/">CIS 641 Project Repo</a></li>
 				</ul>
 			</footer>
 		</body>
