--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="https://www.linkedin.com/in/nicholascartergv/">LinkedIn</a></li>
-					<li><a href="https://i-need-this-to-fork-the-repo-again.github.io/GVSU-CIS641-ElectricSpaghetti/">CIS 641 Project Repo</a></li>
+					<li><a href="https://i-need-this-to-fork-the-repo-again.github.io/GVSU-CIS641-ElectricSpaghetti/">CIS 641 Project Page</a></li>
 				</ul>
 			</footer>
 		</body>
